--- a/templates/index.html
+++ b/templates/index.html
@@ -264,7 +264,7 @@
 
             <span class="h1 -yellow">We help you to choose your wine!</span>
 
-            <a href="javascript:void(0)" class="button">Explore</a>
+            <a href="#about" class="button">Explore</a>
 
             <a href="#about" class="chevron-down smoothScroll">
                 <img class="icon" src="../static/img/chevron_down_white.svg" title="Scroll down" alt="Chevron pointing downwards">
@@ -303,9 +303,8 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a class="smoothScroll" href="#home">Home <span class="sr-only">(current)</span></a></li>
                         <li><a class="smoothScroll" href="#about">About us</a></li>
-                        <li><a class="smoothScroll" href="#portfolio">Portfolio</a></li>
-                        <li><a class="smoothScroll" href="#clients">Clients</a></li>
-                        <li><a class="smoothScroll" href="#contact">Contact</a></li>
+                        <li><a class="smoothScroll" href="#portfolio">Prediction</a></li>
+                        <li><a class="smoothScroll" href="#clients">Insights</a></li>
                     </ul>
 
                 </div> <!-- /.navbar-collapse -->
@@ -380,16 +379,14 @@
                             <div class="col-md-8 col-md-offset-2">
 
                                 <!-- Section title -->
-                                <h2 class="title -black">Portfolio</h2>
+                                <h2 class="title -black">Prediction</h2>
 
-                                <span class="subtitle h3 -yellow">When we are bored we make some of these</span>
+                                <span class="subtitle h3 -yellow">Let's witness the magic!</span>
 
                             </div>
 
                         </div> <!-- /.row -->
-                        <div id="captword">
-                            <p id = "actualword"></p>
-                        </div>
+
                         <div class="row box-container" id="bagword" align="center">
                             <script>
 
@@ -473,6 +470,10 @@
                         </div>
 
                     </div> <!-- /.row -->
+
+                    <div id="captword">
+                        <p id = "actualword"></p>
+                    </div>
 
                     <div class ="row">
 
@@ -634,9 +635,9 @@
 
             </div> <!-- /.container -->
 
-            <p class="load-more -yellow text-center">Oh...We have more of these</p>
+            <p class="load-more -yellow text-center">Ohh...that's wonderful. I want some Insights!</p>
 
-            <a href="javascript:void(0)" class="chevron-down">
+            <a href="#clients" class="chevron-down smoothScroll">
                 <img class="icon" src="../static/img/chevron_down_black.svg" title="Load more..." alt="Chevron pointing downwards">
                 <span class="sr-only">Load more...</span>
             </a>
@@ -1751,92 +1752,92 @@
 
     </section> <!-- /.clients -->
 
-    <section id="contact" class="contact">
-
-        <div class="container">
-
-            <div class="row">
-
-                <div class="col-md-8 col-md-offset-2">
-
-                    <!-- Section title -->
-                    <h2 class="title -black">Contact us</h2>
-
-                    <span class="subtitle h3 -yellow">Sure...We can take some time for chat</span>
-
-                </div>
-
-            </div> <!-- /.row -->
-
-            <div class="row box-container">
-
-                <div class="col-md-10 col-md-offset-1">
-
-                    <form class="contact-form">
-
-                        <div class="container-fluid">
-
-                            <div class="row">
-
-                                <div class="col-sm-6">
-
-                                    <label class="sr-only" for="Name">Name</label>
-                                    <input type="text" name="name" id="Name" class="name" placeholder="Name" required>
-
-                                </div>
-
-                                <div class="col-sm-6">
-
-                                    <label class="sr-only" for="Email">Email</label>
-                                    <input type="email" name="email" id="Email" class="email" placeholder="Mail" required>
-
-                                </div>
-
-                            </div> <!-- /.row -->
-
-                            <div class="row">
-
-                                <div class="col-sm-12">
-
-                                    <label class="sr-only" for="Subject">Subject</label>
-                                    <input type="text" name="subject" id="Subject" class="subject" placeholder="Subject" required>
-
-                                </div>
-
-                            </div> <!-- /.row -->
-
-                            <div class="row">
-
-                                <div class="col-sm-12">
-
-                                    <label class="sr-only" for="Message">Message</label>
-                                    <textarea name="message" id="Message" class="message" rows="7" placeholder="Message" required></textarea>
-
-                                </div>
-
-                            </div> <!-- /.row -->
-
-                            <div class="row">
-
-                                <div class="col-sm-12">
-
-                                    <button type="submit" class="btn btn-submit">Send</button>
-
-                                </div>
-
-                            </div> <!-- /.row -->
-
-                        </div> <!-- /.container -->
-
-                    </form>	<!-- /.contact-form -->
-
-                </div>
-
-            </div> <!-- /.row -->
-
-        </div> <!-- /.container -->
-
-    </section> <!-- /.contact -->
+    {#    <section id="contact" class="contact">#}
+    {##}
+    {#        <div class="container">#}
+    {##}
+    {#            <div class="row">#}
+    {##}
+    {#                <div class="col-md-8 col-md-offset-2">#}
+    {##}
+    {#                    <!-- Section title -->#}
+    {#                    <h2 class="title -black">Contact us</h2>#}
+    {##}
+    {#                    <span class="subtitle h3 -yellow">Sure...We can take some time for chat</span>#}
+    {##}
+    {#                </div>#}
+    {##}
+    {#            </div> <!-- /.row -->#}
+    {##}
+    {#            <div class="row box-container">#}
+    {##}
+    {#                <div class="col-md-10 col-md-offset-1">#}
+    {##}
+    {#                    <form class="contact-form">#}
+    {##}
+    {#                        <div class="container-fluid">#}
+    {##}
+    {#                            <div class="row">#}
+    {##}
+    {#                                <div class="col-sm-6">#}
+    {##}
+    {#                                    <label class="sr-only" for="Name">Name</label>#}
+    {#                                    <input type="text" name="name" id="Name" class="name" placeholder="Name" required>#}
+    {##}
+    {#                                </div>#}
+    {##}
+    {#                                <div class="col-sm-6">#}
+    {##}
+    {#                                    <label class="sr-only" for="Email">Email</label>#}
+    {#                                    <input type="email" name="email" id="Email" class="email" placeholder="Mail" required>#}
+    {##}
+    {#                                </div>#}
+    {##}
+    {#                            </div> <!-- /.row -->#}
+    {##}
+    {#                            <div class="row">#}
+    {##}
+    {#                                <div class="col-sm-12">#}
+    {##}
+    {#                                    <label class="sr-only" for="Subject">Subject</label>#}
+    {#                                    <input type="text" name="subject" id="Subject" class="subject" placeholder="Subject" required>#}
+    {##}
+    {#                                </div>#}
+    {##}
+    {#                            </div> <!-- /.row -->#}
+    {##}
+    {#                            <div class="row">#}
+    {##}
+    {#                                <div class="col-sm-12">#}
+    {##}
+    {#                                    <label class="sr-only" for="Message">Message</label>#}
+    {#                                    <textarea name="message" id="Message" class="message" rows="7" placeholder="Message" required></textarea>#}
+    {##}
+    {#                                </div>#}
+    {##}
+    {#                            </div> <!-- /.row -->#}
+    {##}
+    {#                            <div class="row">#}
+    {##}
+    {#                                <div class="col-sm-12">#}
+    {##}
+    {#                                    <button type="submit" class="btn btn-submit">Send</button>#}
+    {##}
+    {#                                </div>#}
+    {##}
+    {#                            </div> <!-- /.row -->#}
+    {##}
+    {#                        </div> <!-- /.container -->#}
+    {##}
+    {#                    </form>	<!-- /.contact-form -->#}
+    {##}
+    {#                </div>#}
+    {##}
+    {#            </div> <!-- /.row -->#}
+    {##}
+    {#        </div> <!-- /.container -->#}
+    {##}
+    {#    </section> <!-- /.contact -->#}
 
 </main>
 
@@ -1849,14 +1850,13 @@
         <div class="row">
 
             <div class="col-sm-6">
-                <small class="copyright -yellow"> © <span id="year">2016</span> -  YellowMoon All Right Reserved</small>
+                <small class="copyright -yellow"> © <span id="year">2016</span> - Team Productive All Right Reserved</small>
             </div>
 
             <div class="col-sm-6">
                 <ul class="social-list">
                     <li><a href="javascript:void(0)"><span class="icon icon-facebook" aria-hidden="true"></span></a></li>
                     <li><a href="javascript:void(0)"><span class="icon icon-twitter" aria-hidden="true"></span></a></li>
-                    <li><a href="javascript:void(0)"><span class="icon icon-dribbble" aria-hidden="true"></span></a></li>
                     <li><a href="javascript:void(0)"><span class="icon icon-google" aria-hidden="true"></span></a></li>
                     <li><a href="javascript:void(0)"><span class="icon icon-youtube" aria-hidden="true"></span></a></li>
                 </ul>
