--- a/templates/index.html
+++ b/templates/index.html
@@ -321,7 +321,7 @@
 
             <div class="row">
 
-                <div class="col-md-8 col-md-offset-2">
+                <div class="col-md-8 col-md-offset-2" style="margin-top:3%">
 
                     <!-- Section title -->
                     <h2 class="title -black">About us</h2>
@@ -369,6 +369,7 @@
                     </div> <!-- /.about-box -->
 
                 </div>
+            </div>
 
                 <section id="portfolio" class="portfolio">
 
