--- a/templates/index.html
+++ b/templates/index.html
@@ -304,7 +304,7 @@
                         <li class="active"><a class="smoothScroll" href="#home">Home <span class="sr-only">(current)</span></a></li>
                         <li><a class="smoothScroll" href="#about">About us</a></li>
                         <li><a class="smoothScroll" href="#Prediction">Prediction</a></li>
-                        <li><a class="smoothScroll" href="#clients">Insights</a></li>
+                        <li><a class="smoothScroll" href="#Insights">Insights</a></li>
                     </ul>
 
                 </div> <!-- /.navbar-collapse -->
@@ -637,16 +637,16 @@
 
             </div> <!-- /.container -->
 
-            <p class="load-more -yellow text-center">Ohh...that's wonderful. I want some Insights!</p>
-
-            <a href="#clients" class="chevron-down smoothScroll">
-                <img class="icon" src="../static/img/chevron_down_black.svg" title="Load more..." alt="Chevron pointing downwards">
-                <span class="sr-only">Load more...</span>
-            </a>
+{#            <p class="load-more -yellow text-center">Ohh...that's wonderful. I want some Insights!</p>#}
+{##}
+{#            <a href="#Insights" class="chevron-down smoothScroll">#}
+{#                <img class="icon" src="../static/img/chevron_down_black.svg" title="Load more..." alt="Chevron pointing downwards">#}
+{#                <span class="sr-only">Load more...</span>#}
+{#            </a>#}
         </div>
     </section> <!-- /.Prediction -->
 
-    {#    <section id="clients">#}
+    {#    <section id="Insights">#}
     {##}
     {#        <div id="datavisualization" style="display: block;">#}
     {#            <br>#}
@@ -1188,9 +1188,9 @@
     {#        </div>#}
     {#        </div>#}
     {##}
-    {#    </section> <!-- /.clients -->#}
+    {#    </section> <!-- /.Insights -->#}
 
-    <section id="clients">
+    <section id="Insights">
 
         <div class="container">
 
@@ -1752,7 +1752,7 @@
 
         </div> <!-- /.container -->
 
-    </section> <!-- /.clients -->
+    </section> <!-- /.Insights -->
 
     {#    <section id="contact" class="contact">#}
     {##}
