--- a/templates/index.html
+++ b/templates/index.html
@@ -374,7 +374,7 @@
 
                 <section id="Prediction" class="Prediction">
 
-                    <div class="container">
+                    <div class="container" style="margin-top: -9%;">
 
                         <div class="row">
 
@@ -425,7 +425,7 @@
                                         .attr("width", width + margin.left + margin.right)
                                         .attr("height", height + margin.top + margin.bottom)
                                         .attr("id","bagg")
-                                        .attr("transform","translate(-40,-250)")
+                                        .attr("transform","translate(-10,-250)")
                                         .append("g")
                                         .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
