--- a/templates/index.html
+++ b/templates/index.html
@@ -631,15 +631,17 @@
                                               .attr("x",0 - (height / 2))
                                               .attr("dy", "1em")
                                               .style("text-anchor", "middle")
-                                              .text("Top wines ---->");
+                                              .attr("class","lead")
+                                              .text("Name of wines");
 
                                         // text label for the x axis
                                           svg.append("text")
                                               .attr("transform",
                                                     "translate(" + (width/2) + " ," +
-                                                                   480 + ")")
+                                                                   490 + ")")
                                               .style("text-anchor", "middle")
-                                              .text("Probability ---->");
+                                              .attr("class","lead")
+                                              .text("Prediction probability");
 
                                     });
 
