--- a/templates/index.html
+++ b/templates/index.html
@@ -656,9 +656,9 @@
                     </div> <!-- /.row -->
 
 
-            <p class="load-more -yellow text-center">Ohh...that's wonderful. I want some Insights!</p>
+            <p class="load-more -yellow text-center" style="margin-top:5%; font-size:20px;">Ohh...that's wonderful. I want some Insights!</p>
 
-            <a href="#clients" class="chevron-down smoothScroll">
+            <a href="#Insights" class="chevron-down smoothScroll">
                 <img class="icon" src="../static/img/chevron_down_black.svg" title="Load more..." alt="Chevron pointing downwards">
                 <span class="sr-only">Load more...</span>
             </a>
