--- a/templates/index.html
+++ b/templates/index.html
@@ -33,8 +33,8 @@
         var words=""
         var tmp=""
         $(document).click(function( event ) {
-            if(event.target.parentElement.className.baseVal == "wordcloud"){
-                document.getElementById("actualword").innerText += event.target.textContent + '\xa0\xa0';
+            if(event.target.parentElement.className.baseVal == "wordcloud")
+            {
                 if(words!="")
                 {
                     words+= " " + event.target.textContent;
@@ -469,16 +469,12 @@
 
                         </div>
 
-                    </div> <!-- /.row -->
-
-                    <div id="captword">
-                        <p id = "actualword"></p>
                     </div>
 
                     <div class ="row">
 
                         <div class="col-sm-12" align="center">
-                            <p id="selectedWords"></p>
+                            <p id="selectedWords" class="lead"></p>
                             <button type="button" width="150px" class="btn btn-warning" onclick="showBarChart()">I can't wait :)</button>
                         </div>
 
@@ -632,8 +628,6 @@
 
 
                     </div> <!-- /.row -->
-
-            </div> <!-- /.container -->
 
             <p class="load-more -yellow text-center">Ohh...that's wonderful. I want some Insights!</p>
 
