--- a/templates/index.html
+++ b/templates/index.html
@@ -93,8 +93,8 @@
         }
 
         #wineDropDown {
-            padding-top:90px;
-            margin-left: 350px;
+            padding-top:20px;
+            margin-left: 250px;
         }
 
         .node text {
@@ -377,8 +377,7 @@
 
                 </div>
             </div>
-
-                <section id="Prediction" class="Prediction">
+            <section id="Prediction" class="Prediction">
 
                     <div class="container" style="margin-top: -9%;">
 
@@ -475,16 +474,13 @@
                                 });
 
                             </script>
-
-
                         </div>
-
                     </div>
 
                     <div class ="row">
 
                         <div class="col-sm-12" align="center" style="margin-top:-20%">
-                            <p id="selectedWords" class="lead" style="margin-top: -2%;"></p>
+                            <p id="selectedWords" class="lead" style="margin-top: -2%;color: darkblue"></p>
 
                             <a href="#ShowMLVisualization" class="btn btn-warning smoothScroll"  onclick="showBarChart()">I can't wait :)</a>
 
@@ -1440,7 +1436,8 @@
     {#        </div> <!-- /.container -->#}
     {##}
     {#    </section> <!-- /.contact -->#}
-
+        </div>
+    </section>
 </main>
 
 <footer id="footer" class="footer">
