--- a/templates/index.html
+++ b/templates/index.html
@@ -991,7 +991,11 @@
 
                 <div id = "Treemap">
                     <script>
-
+                        //****************************************************************************
+                        // Treemap
+                        //Source: https://bl.ocks.org/mbostock/4063582
+                        //Purpose: to understand the usage of tree map and how to call it
+                        //****************************************************************************
                         function displayTreeMap(Country, wineName){
 
                             var elem = document.getElementById('dvTreeMap');
@@ -1099,7 +1103,11 @@
                 <div id="dvcollapsibletree">
 
                     <script>
-
+                        //****************************************************************************
+                        // Collapsible tree
+                        //Source: https://bl.ocks.org/mbostock/4339083
+                        //Purpose: to understand the usage of collapsible tree and how to call it.
+                        //****************************************************************************
                         function displayCollapsibleTree(Country, wineName)
                         {
                             /*$('html,body').animate({
@@ -1133,8 +1141,6 @@
                                     .attr("id","SVG_collapsibletree")
                                     .append("g")
                                     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-
 
                                 var opts = {
                                     lines: 13, // The number of lines to draw
