--- a/templates/index.html
+++ b/templates/index.html
@@ -462,6 +462,12 @@
 
                         <div id="ShowMLVisualization" align="center" style="margin-top:-10%">
                             <script type="text/javascript">
+
+                                //****************************************************************************
+                                // BarChart
+                                //Source: http://bl.ocks.org/juan-cb/faf62e91e3c70a99a306
+                                //Purpose: to understand the usage of Barchart and how to call it
+                                //****************************************************************************
                                 function showBarChart(){
 
                                     var checkif_svg_exists = document.getElementById('SVG_MLbarchart');
@@ -732,6 +738,7 @@
 
                     function callBarChart(obj)
                     {
+
                         var selectedValue = document.getElementById("winesList");
                         var width = 1200;
                         var height = 400;
