--- a/templates/index.html
+++ b/templates/index.html
@@ -1105,7 +1105,7 @@
                         }
 
                     </script>
-
+                <hr/>
                 </div>
                 <div id="dvcollapsibletree">
 
@@ -1123,10 +1123,15 @@
                             {
 
                                 var elem = document.getElementById('SVG_collapsibletree');
+
                                 if (elem !=null)
                                 {
                                     elem.parentNode.removeChild(elem);
                                 }
+
+                                var line = document.createElement('hr');// make a hr
+                                line.width = "1150px";
+                                document.getElementById('dvcollapsibletree').appendChild(line) // append a line break
 
                                 var margin = {top: 20, right: 120, bottom: 20, left: 120},
                                     width = 960 - margin.right - margin.left,
@@ -1320,6 +1325,7 @@
                                     update(d);
                                 }
                             }
+
                         }
 
                     </script>
