--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!--
- * A Design by GraphBerry
+ * A Design template by GraphBerry
  * Author: GraphBerry
  * Author URL: http://graphberry.com
  * License: http://graphberry.com/pages/license
@@ -373,7 +373,7 @@
 
                         <div class="col-sm-12" align="center" style="margin-top:-20%">
                             <p id="selectedWords" class="lead" style="margin-top: -2%;color: darkblue"></p>
-
+                            <!-- clicking the below button will call bar chart function containing machine learning results. -->
                             <a href="#ShowMLVisualization" class="btn btn-warning smoothScroll"  onclick="showBarChart()">I can't wait :)</a>
 
                         </div>
@@ -382,15 +382,12 @@
 
                     <div >
 
-
                         <div id="ShowMLVisualization" align="center" style="margin-top:-10%">
                             <!-- function to display the Barchart-->
                             <script type="text/javascript" src="../static/js/showBarChart.js"></script>
                         </div>
 
-
                     </div> <!-- /.row -->
-
 
             <p class="load-more -yellow text-center" style="margin-top:5%; font-size:20px;">Ohh...that's wonderful. I want some Insights!</p>
 
