--- a/templates/index.html
+++ b/templates/index.html
@@ -436,7 +436,7 @@
                     <script type="text/javascript" src="../static/js/displayTreeMap.js"></script>
                 <hr/>
                 </div>
-                <div id="dvcollapsibletree">
+                <div id="dvcollapsibletree" style="margin-top: 10px">
                     <!-- function to display the collapsible tree-->
                     <script type="text/javascript" src="../static/js/displayCollapsibleTree.js"></script>
                 </div>
